bugfix for parallax on mobiles

--- a/source/header.less
+++ b/source/header.less
@@ -101,7 +101,7 @@
 }
 
 .video-content {
-   top: 15%;
+   top: 25%;
    left: 8%;
    .absolute;
    z-index: 2;
@@ -129,6 +129,7 @@
    .relative;
    z-index: 3;
    text-transform: none;
+   margin-bottom: 30px;
 }
 
 .video-content a {
